# nobetcigorevi

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  calismalar.ipynb  environment.yml  pyproject.toml  requirements.txt  run.py  setup.py
docs/: index.rst  installation.rst  make.bat  nobetci.desktop  usage.rst
nobet/: main.py
nobet/data/: okul_veritabani.db
nobet/db/: models.py
nobet/utils/: DagitimMotoru.py  database_util.py  nobetcimodel.py  pencere_fonksiyon.py  rapor.py
nobet/views/: main_window.py
nobetcigorevi/: __init__.py
nobetcigorevi/src/: main.py
nobetcigorevi/src/db/: database.py  models.py
nobetcigorevi/src/ui/: main_gui.ui
nobetcigorevi/src/ui/style/: default.qss
nobetcigorevi/src/utils/: DagitimMotoru.py  database_util.py  dersprogrami_isleyici.py  helper.py  nobetcimodel.py  nobetraporu.py  pencere_fonksiyon.py  rapor.py  veri_aktarimi_yonetici.py  verihazirla.py
nobetcigorevi/src/views/: main_window.py
src/: eokulveridonustur.py  run.py  verileridbkaydet.py
src/nobetcigorevi/: main.py
src/nobetcigorevi/db/: database.py  models.py
src/nobetcigorevi/ui/: main_gui.ui  output.py
src/nobetcigorevi/utils/: DagitimMotoru.py  database_util.py  nobetcimodel.py  pencere_fonksiyon.py  rapor.py  tablemanager.py  veriaktar.py  verihazirla.py
src/nobetcigorevi/views/: main_window.py
tests/: __init__.py  test_nobetcigorevi.py
