[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nobetcigorevi"
description = "Anadolu Lisesi Nöbetçi Öğretmen Ders Doldurma Görevi Yönetimi"
readme = "README.rst"
authors = [
  {name = "Şenol Irmak", email = "senolirmak@gmail.com"}
]
maintainers = [
  {name = "Şenol Irmak", email = "senolirmak@gmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [

]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "tox", # testing
]

[project.urls]

bugs = "https://github.com/senolirmak/nobetcigorevi/issues"
changelog = "https://github.com/senolirmak/nobetcigorevi/blob/master/changelog.md"
homepage = "https://github.com/senolirmak/nobetcigorevi"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]



[tool.setuptools.dynamic]
version = {attr = "nobetcigorevi.__version__"}

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py39, py310, py311, py312, py313, ruff
isolated_build = true

[gh]
python =
    3.13 = py313
    3.12 = py312
    3.11 = py311
    3.10 = py310
    3.9 = py39
    3.8 = py38

[testenv]
deps =
    -r{toxinidir}/requirements_dev.txt
commands =
    pytest --basetemp={envtmpdir}

[testenv:ruff]
deps =
    ruff
commands =
    ruff check .
"""